--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,11 @@
 %html
   %head
-    %title Columbus Clojure User Group
+    %title Columbus Clojure
     %link{:rel => "stylesheet", :href => "/screen.css", :type => "text/css"}
+    %link{:rel => "shortcut icon", :href => "/favicon.ico"}
+    %script{:rel => "javascript", :src => "/javascripts/jquery-1.7.1.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/jquery-ui-1.8.18.custom.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
 
     %body
       .container
