--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -44,7 +44,7 @@
 
     %section
       %p
-        We are a group composed of both professionals <em>and</em> students ethusiastic about Clojure. Whether you're new Clojure or you've been hacking for years, we'd love to have you 
+        We are a group composed of both professionals <em>and</em> students enthusiastic about Clojure. Whether you're new Clojure or you've been hacking for years, we'd love to have you 
         <a href="#join" class="join-link">join us</a>.
 
   #what.third
