--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -44,7 +44,7 @@
 
     %section
       %p
-        We are a group composed of both professionals <em>and</em> students enthusiastic about Clojure. Whether you're new Clojure or you've been hacking for years, we'd love to have you 
+        We are an open group composed of both professionals <em>and</em> students enthusiastic about Clojure. Whether you're new Clojure or you've been hacking for years, we'd love to have you 
         <a href="#join" class="join-link">join us</a>.
 
   #what.third
@@ -56,7 +56,7 @@
       %p
         The purpose of this group is to provide a community of like-minded individuals where <em>anyone</em> can come and learn something. The format is usually several small lightning talks given by our members, followed by some hacking.
       %p
-        Oh, and there's free food and drinks for all!
+        Oh, and there's free food and drinks!
 
   #join.third
     %h2
