--- a/views/screen.sass
+++ b/views/screen.sass
@@ -38,6 +38,19 @@ a
         text-decoration: none
         color: $lite-blue
 
+#banner
+    font-size: 1.5em
+    margin-bottom: 2em
+    text-align: center
+    vertical-align: text-top
+
+    a
+        color: $dark-green
+        margin: 2em
+
+        &:hover
+            color: $lite-green
+
 .thirds
     overflow: hidden
     .third
