--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -3,6 +3,10 @@
     %img(src='/images/clojure-icon.gif')
     Columbus Clojure User Group
 
+#banner
+  %a(href="#{@mailing_list}" target="_blank") Join the Mailing List
+  %a(href="https://twitter.com/columbusclojure" target="_blank") Follow us on Twitter
+
 .thirds
   #where.third
     %h2
