--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,7 @@
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}
     %script{:rel => "javascript", :src => "/javascripts/jquery-1.7.1.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/jquery-ui-1.8.18.custom.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/underscore-min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
 
     %body
