--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,7 @@
   %head
     %title Columbus Clojure
     %link{:rel => "stylesheet", :href => "/screen.css", :type => "text/css"}
+    %link{:rel => "icon", :href => "/favicon.ico"}
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}
     %script{:rel => "javascript", :src => "/javascripts/jquery-1.7.1.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/jquery-ui-1.8.18.custom.min.js", :type => "text/javascript"}
