use hosted image from wikipedia and source it in the alt attribute

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,7 +12,8 @@
 
     %body
       #image-bar
-        %img(src='/images/columbus-ohio-skyline-panorama.jpg')
+        %img(src='http://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg'
+             alt='Photo courtesy of http://en.wikipedia.org/wiki/File:Columbus-ohio-skyline-panorama.jpg')
 
       .container
         = yield
