--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,10 +1,17 @@
 %html
   %head
-    %title Columbus Clojure
+    %meta{"http-equiv" => "content-type", :content => "text/html; charset=utf-8"}
+    %meta{:name => "language", :content => "en"}
+    %meta{:name => "description", :content => "Columbus Clojure User Group is a group of hackers enthusiastic about Clojure"}
+    %meta{:name => "keywords", :content => "clojure columbus functional programming usergroup"}
+
+    %title Columbus Clojure User Group
+
     %link{:rel => "stylesheet", :href => "/stylesheets/reset.css", :type => "text/css"}
     %link{:rel => "stylesheet", :href => "/screen.css", :type => "text/css"}
     %link{:rel => "icon", :href => "/favicon.ico"}
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}
+
     %script{:rel => "javascript", :src => "/javascripts/jquery-1.7.1.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/jquery-ui-1.8.18.custom.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/underscore-min.js", :type => "text/javascript"}
