--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,7 @@
     %script{:rel => "javascript", :src => "/javascripts/jquery-1.7.1.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/jquery-ui-1.8.18.custom.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/underscore-min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/sugar-1.2.4.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
 
     %body
@@ -22,5 +23,20 @@
         %img(src='http://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg'
              alt='Photo courtesy of http://en.wikipedia.org/wiki/File:Columbus-ohio-skyline-panorama.jpg')
 
-      .container
-        = yield
+      #main
+        .container
+          = yield
+
+      #twitter
+        %img(src='/images/twitter-newbird-white.png')
+        .container
+          %h2
+            Latest Tweets from
+            %a(href="https://twitter.com/columbusclojure" target="_blank") @ColumbusClojure
+          #tweets
+
+    %script#tweetTemplate(type="text/template")
+      %li
+        %span.time <%= time %>
+        &mdash;
+        <%= tweet %>
