--- a/views/screen.sass
+++ b/views/screen.sass
@@ -76,12 +76,18 @@ a
         width: 15%
 
 #tweets
+    overflow: hidden
+
     li
+        width: 46%
+        float: left
+        margin-bottom: 1em
+        margin-right: 1em
         list-style: none
-        margin-bottom: 0.2em
 
         .time
-            font-weight: bold
+            font-style: italic
+            font-size: smaller
 
     a
         &, &:visited
