--- a/views/screen.sass
+++ b/views/screen.sass
@@ -67,9 +67,11 @@ a
 
 #twitter
     background-color: $lite-blue
-    height: 400px
+    bottom: 0
+    min-height: 300px
     padding-top: 2em
     padding-left: 2em
+    padding-bottom: 100px
 
     img
         float: left
@@ -78,12 +80,16 @@ a
 #tweets
     overflow: hidden
 
-    li
-        width: 46%
+    .tweet
+        width: 368px
         float: left
+        text-indent: -1em
+        margin-left: 1em
+        margin-right: 12px
         margin-bottom: 1em
-        margin-right: 1em
-        list-style: none
+
+        &:last-child
+            margin-right: 0
 
         .time
             font-style: italic
