better aligning of tweets

--- a/views/screen.sass
+++ b/views/screen.sass
@@ -116,6 +116,19 @@ a
         &.colored
             background: $liter-blue
 
+.halves
+    overflow: hidden
+
+    .half
+        height: 6em
+        width: 48%
+        float: left
+        margin-right: 2em
+        margin-bottom: 2em
+
+        &:last-child
+            margin-right: 0
+
 li
     padding-bottom: 0.5em
     text-indent: -1em
