--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -97,7 +97,7 @@
     %h2
       Latest Tweets from
       %a(href="https://twitter.com/columbusclojure" target="_blank") @ColumbusClojure
-    #tweets
+    #tweets.halves
 
 %script#tweetTemplate(type="text/template")
   %span.time <%= time %> &mdash;
