--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,6 +17,7 @@
     %script{:rel => "javascript", :src => "/javascripts/underscore-min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/sugar-1.2.4.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/analytics.js", :type => "text/javascript"}
 
     %body
       = yield
