--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -52,7 +52,8 @@
                   %a(href="#{sp['link']}")= sp["name"]
                 %br
                 %strong
-                  Function of the Month
+                  Function of the Month:
+                %em #{sp['talk']}
 
     .thirds
       #who.third
