extraction of meeting class

--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -31,7 +31,7 @@
           Next Meeting
 
         %section
-          %p= formatted_date(@next_meeting)
+          %p= formatted_date(@next_meeting.date)
 
       #speakers.third
         %h2
