add announcements section

--- a/views/screen.sass
+++ b/views/screen.sass
@@ -21,7 +21,7 @@ p
 h1
     margin: auto
     position: absolute
-    top: 0.5em
+    top: 1.0em
     color: $dark-blue
     font-size: 3.5em
 
@@ -54,6 +54,19 @@ a
         width: 100%
 
 //#main
+
+#announcements
+    position: relative
+    height: 36px
+    text-align: center
+    color: white
+    font-size: 17px
+    line-height: 36px
+    text-decoration: none
+    background: $dark-blue
+    -webkit-box-shadow: inset 0 -1px 5px rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: inset 0 -1px 5px rgba(0, 0, 0, 0.2)
+    box-shadow: inset 0 -1px 5px rgba(0, 0, 0, 0.2)
 
 #banner
     font-size: 1.5em
