--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -1,3 +1,6 @@
+#announcements
+  %span ANNOUNCEMENT: July meeting has been rescheduled to the 11th
+
 #image-bar
   %img(src='http://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg'
        alt='Photo courtesy of http://en.wikipedia.org/wiki/File:Columbus-ohio-skyline-panorama.jpg')
