prettify the next meeting date

--- a/views/screen.sass
+++ b/views/screen.sass
@@ -155,3 +155,24 @@ li
 .right
     float: right
     width: 48%
+
+#date-block
+    line-height: .75
+
+    .weekday
+        font-weight: bold
+        font-size: 2.7em
+        color: $lite-blue
+        text-transform: uppercase
+
+    .month-day
+        font-weight: bold
+        font-size: 5.4em
+        color: $text
+        text-transform: uppercase
+
+    .time
+        font-weight: bold
+        font-size: 4.9em
+        color: $lite-green
+        text-transform: uppercase
