--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -1,5 +1,5 @@
-#announcements
-  %span ANNOUNCEMENT: July meeting has been rescheduled to the 11th
+/#announcements
+/  %span ANNOUNCEMENT: July meeting has been rescheduled to the 11th
 
 #image-bar
   %img(src='http://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg'
