more abstractions for Meeting

--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -49,13 +49,13 @@
 
         %section
           %ul
-            - @speakers.each do |sp|
+            - @next_meeting.speakers.each do |sp|
               %li
                 %strong
                   %a(href="#{sp['link']}")= sp["name"]
                 %br
                 = sp["talk"]
-            - @fotm.each do |sp|
+            - @next_meeting.fotm.each do |sp|
               %li
                 %strong
                   %a(href="#{sp['link']}")= sp["name"]
