--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,10 +12,10 @@
     %link{:rel => "icon", :href => "/favicon.ico"}
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}
 
-    %script{:rel => "javascript", :src => "/javascripts/jquery-1.7.1.min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "/javascripts/jquery-ui-1.8.18.custom.min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "/javascripts/underscore-min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "/javascripts/sugar-1.2.4.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/sugar/1.3.7/sugar.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/analytics.js", :type => "text/javascript"}
 
