renamed to call_for_speakers
where partial

when partial

speakers partial

use locals instead of accessing instances in the partials

who partial

what partial

join partial

--- a/views/speakers_list.haml
+++ b/views/speakers_list.haml
@@ -1,10 +1,10 @@
-- @next_meeting.speakers.each do |speaker|
+- speakers.each do |speaker|
   %li
     %strong
       %a(href="#{speaker['link']}")= speaker["name"]
     %br
     = speaker["talk"]
-- @next_meeting.fotm.each do |fspeaker|
+- fotm.each do |fspeaker|
   %li
     %strong
       %a(href="#{fspeaker['link']}")= fspeaker["name"]
