--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -24,16 +24,8 @@
         = haml :when
 
       #speakers.third
-        %h2
-          %img(src='/images/stylistica-icons-set/24x24/comments.png')
-          Speakers
+        = haml :speakers
 
-        %section
-          %ul
-            - if @next_meeting.speakers.empty? && @next_meeting.fotm.empty?
-              = haml :call_for_speakers
-            - else
-              = haml :speakers_list
     .thirds
       #who.third
         %h2
