--- a/views/when.haml
+++ b/views/when.haml
@@ -5,8 +5,8 @@
 %section
   #date-block
     %span.weekday
-      = formatted_weekday(@next_meeting.date)
+      = formatted_weekday(next_meeting.date)
     %span.month-day
-      = formatted_month_day(@next_meeting.date)
+      = formatted_month_day(next_meeting.date)
     %span.time
-      = formatted_time(@next_meeting.date)
+      = formatted_time(next_meeting.date)
