--- a/views/speakers.haml
+++ b/views/speakers.haml
@@ -4,7 +4,7 @@
 
 %section
   %ul
-    - if @next_meeting.speakers.empty? && @next_meeting.fotm.empty?
-      = haml :call_for_speakers
+    - if next_meeting.speakers.empty? && next_meeting.fotm.empty?
+      = haml :call_for_speakers, :locals => {:mailing_list => mailing_list}
     - else
-      = haml :speakers_list
+      = haml :speakers_list, :locals => {:speakers => next_meeting.speakers, :fotm => next_meeting.fotm}
