--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -28,14 +28,7 @@
 
     .thirds
       #who.third
-        %h2
-          %img(src='/images/stylistica-icons-set/24x24/help.png')
-          Who We Are
-
-        %section
-          %p
-            We are an open group composed of both professionals <em>and</em> students enthusiastic about Clojure. Whether you're new Clojure or you've been hacking for years, we'd love to have you 
-            <a href="#join" class="join-link">join us</a>.
+        = haml :who
 
       #what.third
         %h2
