--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -31,15 +31,7 @@
         = haml :who
 
       #what.third
-        %h2
-          %img(src='/images/stylistica-icons-set/24x24/info.png')
-          What We Do
-
-        %section
-          %p
-            The purpose of this group is to provide a community of like-minded individuals where <em>anyone</em> can come and learn something. The format is usually several small lightning talks given by our members, followed by some hacking.
-          %p
-            Oh, and there's free food and drinks!
+        = haml :what
 
       #join.third
         %h2
