--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,10 +12,10 @@
     %link{:rel => "icon", :href => "/favicon.ico"}
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}
 
-    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/sugar/1.3.7/sugar.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.8/sugar.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "/javascripts/analytics.js", :type => "text/javascript"}
 
