add announcement for June meeting location change

--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -1,5 +1,5 @@
-/#announcements
-/  %span ANNOUNCEMENT: July meeting has been rescheduled to the 11th
+#announcements
+  %span ANNOUNCEMENT: June meeting will be held at Manta. 8760 Orion Parkway, 1st Floor
 
 #image-bar
   %img(src='http://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg'
