--- a/views/where.haml
+++ b/views/where.haml
@@ -3,7 +3,8 @@
   Location
 
 %section
-  %a(href="http://maps.google.com/maps?q=1266+Manning+Pkwy+Suite+B,+Powell,+OH+43065&hl=en&sll=40.140172,-83.041019&sspn=0.00803,0.008937&hnear=1266+Manning+Pkwy,+Powell,+Ohio+43065&t=m&z=17" target="_blank")
-    <p>Neo Columbus<br/>
-    1266 Manning Pkwy, Suite B<br/>
-    Powell, OH 43065</p>
+  %a(href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=8760+Orion+Parkway,+1st+Floor&aq=&sll=40.365277,-82.669252&sspn=8.192818,16.907959&vpsrc=0&ie=UTF8&hq=&hnear=8760+Orion+Pl,+Columbus,+Delaware,+Ohio+43240&t=m&z=17&iwloc=A" target="_blank")
+    <p>Manta<br/>
+    8760 Orion Parkway<br/>
+    1st Floor<br/>
+    Columbus, OH 43240</p>
