--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -35,3 +35,16 @@
 
       #join.third
         = haml :join, :locals => {:mailing_list => @mailing_list}
+
+#twitter
+  %img(src='/images/twitter-bird-dark-bgs.png')
+  .container
+    %h2
+      Latest Tweets from
+      %a(href="#{@twitter_url}" target="_blank") @ColumbusClojure
+    #tweets.halves
+
+%script#tweetTemplate(type="text/template")
+  %span.time <%= time %> &mdash;
+  %br
+  <%= tweet %>
