--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -37,14 +37,4 @@
         = haml :join, :locals => {:mailing_list => @mailing_list}
 
 #twitter
-  %img(src='/images/twitter-bird-dark-bgs.png')
-  .container
-    %h2
-      Latest Tweets from
-      %a(href="#{@twitter_url}" target="_blank") @ColumbusClojure
-    #tweets.halves
-
-%script#tweetTemplate(type="text/template")
-  %span.time <%= time %> &mdash;
-  %br
-  <%= tweet %>
+  = haml :tweets
