update for august meeting

--- a/views/welcome.haml
+++ b/views/welcome.haml
@@ -1,5 +1,5 @@
-#announcements
-  %span ANNOUNCEMENT: July meeting will be held <strong>July 10</strong> at Manta. 8760 Orion Parkway, 1st Floor
+-# #announcements
+-#   %span ANNOUNCEMENT: July meeting will be held <strong>July 10</strong> at Manta. 8760 Orion Parkway, 1st Floor
 
 #image-bar
   %img(src='http://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg'
