--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,8 +16,13 @@
     %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js", :type => "text/javascript"}
     %script{:rel => "javascript", :src => "//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.8/sugar.min.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "/javascripts/site.js", :type => "text/javascript"}
-    %script{:rel => "javascript", :src => "/javascripts/analytics.js", :type => "text/javascript"}
 
     %body
       = yield
+
+    %script{:rel => "javascript", :src => "/javascripts/app.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/colors.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/highlighter.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/tweets.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/init.js", :type => "text/javascript"}
+    %script{:rel => "javascript", :src => "/javascripts/analytics.js", :type => "text/javascript"}
