scale the viewport

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,8 @@
 %html
   %head
     %meta{"http-equiv" => "content-type", :content => "text/html; charset=utf-8"}
+    %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %meta{:name => "language", :content => "en"}
     %meta{:name => "description", :content => "Columbus Clojure User Group is a group of hackers enthusiastic about Clojure"}
     %meta{:name => "keywords", :content => "clojure columbus functional programming usergroup"}
