hide twitter icon on smaller screens

--- a/views/screen.sass
+++ b/views/screen.sass
@@ -104,6 +104,10 @@ a, a:visited
     float: left
     width: 15%
 
+@media (max-width: 1140px)
+  #twitter img
+    display: none
+
 #tweets
   overflow: hidden
 
