replace Next Meeting date with TBD :(

--- a/views/screen.sass
+++ b/views/screen.sass
@@ -156,6 +156,9 @@ li
     float: right
     width: 48%
 
+.no-display
+    display: none
+
 #date-block
     line-height: .75
 
@@ -165,7 +168,7 @@ li
         color: $lite-blue
         text-transform: uppercase
 
-    .month-day
+    .month-day, .tbd
         font-weight: bold
         font-size: 4.8em
         color: $text
