--- a/views/when.haml
+++ b/views/when.haml
@@ -4,9 +4,11 @@
 
 %section
   #date-block
-    %span.weekday
-      = formatted_weekday(next_meeting.date)
-    %span.month-day
-      = formatted_month_day(next_meeting.date)
-    %span.time
-      = formatted_time(next_meeting.date)
+    %span.tbd TBD
+    .no-display
+      %span.weekday
+        = formatted_weekday(next_meeting.date)
+      %span.month-day
+        = formatted_month_day(next_meeting.date)
+      %span.time
+        = formatted_time(next_meeting.date)
