--- a/views/where.haml
+++ b/views/where.haml
@@ -3,7 +3,7 @@
   Location
 
 %section
-  %a(href="http://maps.google.com/maps?q=1266+Manning+Pkwy+Suite+B,+Powell,+OH+43065&hl=en&sll=40.140172,-83.041019&sspn=0.00803,0.008937&hnear=1266+Manning+Pkwy,+Powell,+Ohio+43065&t=m&z=17" target="_blank")
-    <p>Neo Columbus<br/>
-    1266 Manning Pkwy, Suite B<br/>
-    Powell, OH 43065</p>
+  %a(href="https://www.google.com/maps/place/851+N+Pearl+St,+Columbus,+OH+43215/@39.9797799,-83.0033436,17z/data=!3m1!4b1!4m2!3m1!1s0x88388ed7506c2985:0x599ee7b606c708af" target="_blank")
+    <p>LendingHome<br/>
+    851 N Pearl St<br/>
+    Columbus, OH 43215</p>
