--- a/views/when.haml
+++ b/views/when.haml
@@ -4,11 +4,12 @@
 
 %section
   #date-block
-    %span.tbd TBD
-    .no-display
+    - if next_meeting
       %span.weekday
         = formatted_weekday(next_meeting.date)
       %span.month-day
         = formatted_month_day(next_meeting.date)
       %span.time
         = formatted_time(next_meeting.date)
+    - else
+      %span.tbd TBD
