Add meetup RSVP link

--- a/views/join.haml
+++ b/views/join.haml
@@ -11,3 +11,7 @@
     just show up at our
     <a href="#when" class="when-link">next meeting</a>.
     Meetings are held the first Wednesday of every month.
+
+  %p
+    Please RSVP on our
+    <a href="http://www.meetup.com/ColumbusClojure/">meetup page</a>.
